OESE-306 fix too much space below the resource url label

--- a/css/nalrc.css
+++ b/css/nalrc.css
@@ -220,6 +220,7 @@
 .nalrc-main #sngl-resource .nalrc-resource-row .nalrc-resource-value a:hover,
 .nalrc-main #sngl-resource .nalrc-resource-row .nalrc-resource-value a:focus { color:#000000; }
 .nalrc-main #sngl-resource .nalrc-resource-row .nalrc-resource-value p { margin-bottom:0; }
+.nalrc-main #sngl-resource .nalrc-resource-row.col-lg-9 { padding-left:0; }
 .nalrc-main #sngl-resource .nalrc-resource-thumbnail a { text-decoration:none; }
 .nalrc-main #sngl-resource a.oer-featureimg .dashicons,
 .nalrc-main #sngl-resource div.oer-featureimg .dashicons { height:auto; line-height:1em; }
